removed redundant code and added a button

--- a/index.html
+++ b/index.html
@@ -13,16 +13,6 @@
             <button id="roll">Roll!</button>
         </div>
         <div class="stat-priority">
-            <!-- <form action="" class="stat-priority-form">
-                <label for="priority-one"></label>
-                <select name="priority-one" id="priority-one">
-                    <option value="">Strength</option>
-                    <option value="">Dexterity</option>
-                    <option value="">Constitution</option>
-                    <option value="">Intelligence</option>
-                    <option value="">Wisdom</option>
-                    <option value="">Charisma</option>
-                </select> -->
                 <div class="select-wrapper">
                     <div class="selector">
                         <span>Priority One</span>
@@ -37,57 +27,57 @@
                     </div>
                     <div class="selector">
                         <span>Priority Two</span>
-                        <select name="priority-one" id="priority-two">
-                            <option value="">Strength</option>
-                            <option value="">Dexterity</option>
-                            <option value="">Constitution</option>
-                            <option value="">Intelligence</option>
-                            <option value="">Wisdom</option>
-                            <option value="">Charisma</option>
+                        <select name="priority-two" id="priority-two">
+                            <option value="strength">Strength</option>
+                            <option value="dexterity">Dexterity</option>
+                            <option value="constitution">Constitution</option>
+                            <option value="intelligence">Intelligence</option>
+                            <option value="wisdom">Wisdom</option>
+                            <option value="charisma">Charisma</option>
                         </select>
                     </div>
                     <div class="selector">
                         <span>Priority Three</span>
-                        <select name="priority-one" id="priority-three">
-                            <option value="">Strength</option>
-                            <option value="">Dexterity</option>
-                            <option value="">Constitution</option>
-                            <option value="">Intelligence</option>
-                            <option value="">Wisdom</option>
-                            <option value="">Charisma</option>
+                        <select name="priority-three" id="priority-three">
+                            <option value="strength">Strength</option>
+                            <option value="dexterity">Dexterity</option>
+                            <option value="constitution">Constitution</option>
+                            <option value="intelligence">Intelligence</option>
+                            <option value="wisdom">Wisdom</option>
+                            <option value="charisma">Charisma</option>
                         </select>
                     </div>
                     <div class="selector">
                         <span>Priority Four</span>
-                        <select name="priority-one" id="priority-four">
-                            <option value="">Strength</option>
-                            <option value="">Dexterity</option>
-                            <option value="">Constitution</option>
-                            <option value="">Intelligence</option>
-                            <option value="">Wisdom</option>
-                            <option value="">Charisma</option>
+                        <select name="priority-four" id="priority-four">
+                            <option value="strength">Strength</option>
+                            <option value="dexterity">Dexterity</option>
+                            <option value="constitution">Constitution</option>
+                            <option value="intelligence">Intelligence</option>
+                            <option value="wisdom">Wisdom</option>
+                            <option value="charisma">Charisma</option>
                         </select>
                     </div>
                     <div class="selector">
                         <span>Priority Five</span>
-                        <select name="priority-one" id="priority-five">
-                            <option value="">Strength</option>
-                            <option value="">Dexterity</option>
-                            <option value="">Constitution</option>
-                            <option value="">Intelligence</option>
-                            <option value="">Wisdom</option>
-                            <option value="">Charisma</option>
+                        <select name="priority-five" id="priority-five">
+                            <option value="strength">Strength</option>
+                            <option value="dexterity">Dexterity</option>
+                            <option value="constitution">Constitution</option>
+                            <option value="intelligence">Intelligence</option>
+                            <option value="wisdom">Wisdom</option>
+                            <option value="charisma">Charisma</option>
                         </select>
                     </div>
                     <div class="selector">
                         <span>Priority Six</span>
-                        <select name="priority-one" id="priority-six">
-                            <option value="">Strength</option>
-                            <option value="">Dexterity</option>
-                            <option value="">Constitution</option>
-                            <option value="">Intelligence</option>
-                            <option value="">Wisdom</option>
-                            <option value="">Charisma</option>
+                        <select name="priority-six" id="priority-six">
+                            <option value="strength">Strength</option>
+                            <option value="dexterity">Dexterity</option>
+                            <option value="constitution">Constitution</option>
+                            <option value="intelligence">Intelligence</option>
+                            <option value="wisdom">Wisdom</option>
+                            <option value="charisma">Charisma</option>
                         </select>
                     </div>
                 </div>
