--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                     <div class="selector">
                         <span>Priority One</span>
                         <select name="priority-one" id="priority-one">
-                            <option value="">Strength</option>
-                            <option value="">Dexterity</option>
-                            <option value="">Constitution</option>
-                            <option value="">Intelligence</option>
-                            <option value="">Wisdom</option>
-                            <option value="">Charisma</option>
+                            <option value="strength">Strength</option>
+                            <option value="dexterity">Dexterity</option>
+                            <option value="constitution">Constitution</option>
+                            <option value="intelligence">Intelligence</option>
+                            <option value="wisdom">Wisdom</option>
+                            <option value="charisma">Charisma</option>
                         </select>
                     </div>
                     <div class="selector">
