made the dice role and object creation function work with the priority selector redesign

--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
           </div> -->
 
           <ul>
-            <li class="draggable-element" value="strength" draggable="true">Strength</li>
-            <li class="draggable-element" value="dexterity" draggable="true">Dexterity</li>
-            <li class="draggable-element" value="constitution" draggable="true">Constitution</li>
-            <li class="draggable-element" value="intelligence" draggable="true">Intelligence</li>
-            <li class="draggable-element" value="wisdom" draggable="true">Wisdom</li>
-            <li class="draggable-element" value="charisma" draggable="true">Charisma</li>
+            <li class="draggable-element" data-value="strength" draggable="true">Strength</li>
+            <li class="draggable-element" data-value="dexterity" draggable="true">Dexterity</li>
+            <li class="draggable-element" data-value="constitution" draggable="true">Constitution</li>
+            <li class="draggable-element" data-value="intelligence" draggable="true">Intelligence</li>
+            <li class="draggable-element" data-value="wisdom" draggable="true">Wisdom</li>
+            <li class="draggable-element" data-value="charisma" draggable="true">Charisma</li>
           </ul>
         </div>
       </div>
