moved some code around

--- a/index.html
+++ b/index.html
@@ -14,80 +14,13 @@
       </div>
       <div class="stat-priority">
         <div class="select-wrapper">
-          <!-- <div class="selector">
-            <span>Priority One</span>
-            <select name="priority-one" id="priority-one">
-              <option value="strength">Strength</option>
-              <option value="dexterity">Dexterity</option>
-              <option value="constitution">Constitution</option>
-              <option value="intelligence">Intelligence</option>
-              <option value="wisdom">Wisdom</option>
-              <option value="charisma">Charisma</option>
-            </select>
-          </div>
-          <div class="selector">
-            <span>Priority Two</span>
-            <select name="priority-two" id="priority-two">
-              <option value="strength">Strength</option>
-              <option value="dexterity">Dexterity</option>
-              <option value="constitution">Constitution</option>
-              <option value="intelligence">Intelligence</option>
-              <option value="wisdom">Wisdom</option>
-              <option value="charisma">Charisma</option>
-            </select>
-          </div>
-          <div class="selector">
-            <span>Priority Three</span>
-            <select name="priority-three" id="priority-three">
-              <option value="strength">Strength</option>
-              <option value="dexterity">Dexterity</option>
-              <option value="constitution">Constitution</option>
-              <option value="intelligence">Intelligence</option>
-              <option value="wisdom">Wisdom</option>
-              <option value="charisma">Charisma</option>
-            </select>
-          </div>
-          <div class="selector">
-            <span>Priority Four</span>
-            <select name="priority-four" id="priority-four">
-              <option value="strength">Strength</option>
-              <option value="dexterity">Dexterity</option>
-              <option value="constitution">Constitution</option>
-              <option value="intelligence">Intelligence</option>
-              <option value="wisdom">Wisdom</option>
-              <option value="charisma">Charisma</option>
-            </select>
-          </div>
-          <div class="selector">
-            <span>Priority Five</span>
-            <select name="priority-five" id="priority-five">
-              <option value="strength">Strength</option>
-              <option value="dexterity">Dexterity</option>
-              <option value="constitution">Constitution</option>
-              <option value="intelligence">Intelligence</option>
-              <option value="wisdom">Wisdom</option>
-              <option value="charisma">Charisma</option>
-            </select>
-          </div>
-          <div class="selector">
-            <span>Priority Six</span>
-            <select name="priority-six" id="priority-six">
-              <option value="strength">Strength</option>
-              <option value="dexterity">Dexterity</option>
-              <option value="constitution">Constitution</option>
-              <option value="intelligence">Intelligence</option>
-              <option value="wisdom">Wisdom</option>
-              <option value="charisma">Charisma</option>
-            </select>
-          </div> -->
-
           <ul>
-            <li class="draggable-element" data-value="strength" draggable="true">Strength</li>
-            <li class="draggable-element" data-value="dexterity" draggable="true">Dexterity</li>
-            <li class="draggable-element" data-value="constitution" draggable="true">Constitution</li>
-            <li class="draggable-element" data-value="intelligence" draggable="true">Intelligence</li>
-            <li class="draggable-element" data-value="wisdom" draggable="true">Wisdom</li>
-            <li class="draggable-element" data-value="charisma" draggable="true">Charisma</li>
+            <li class="draggable-element" draggable="true" data-value="strength">Strength</li>
+            <li class="draggable-element" draggable="true" data-value="dexterity">Dexterity</li>
+            <li class="draggable-element" draggable="true" data-value="constitution">Constitution</li>
+            <li class="draggable-element" draggable="true" data-value="intelligence">Intelligence</li>
+            <li class="draggable-element" draggable="true" data-value="wisdom">Wisdom</li>
+            <li class="draggable-element" draggable="true" data-value="charisma">Charisma</li>
           </ul>
         </div>
       </div>
