grabbed proficiencies to put into object

--- a/index.html
+++ b/index.html
@@ -61,25 +61,25 @@
         <div class="class-wrapper">
           <div class="name-input">
             <label for="name">Name</label>
-            <input type="text" id="name" name="name" />
+            <input type="text" id="name" name="name" autocomplete="off" />
           </div>
           <div class="class-selector">
             <label for="class">Class</label>
-            <select name="class" id="class">
+            <select name="class" id="class" autocomplete="off">
               <option value="wizard">Wizard</option>
               <option value="barbarian">Barbarian</option>
             </select>
           </div>
           <div class="race-selector">
             <label for="race">Race</label>
-            <select name="race" id="race">
+            <select name="race" id="race" autocomplete="off">
               <option value="tiefling">Tiefling</option>
               <option value="dragonborn">Dragonborn</option>
             </select>
           </div>
           <div class="background-selector">
             <label for="background">Background</label>
-            <select name="background" id="background">
+            <select name="background" id="background" autocomplete="off">
               <option value="criminal">Criminal</option>
               <option value="sage">Sage</option>
             </select>
@@ -107,6 +107,7 @@
                 type="checkbox"
                 class="check"
                 value="acrobatics"
+                autocomplete="off"
               />Acrobatics</label
             >
           </li>
@@ -116,6 +117,7 @@
                 type="checkbox"
                 class="check"
                 value="animal handling"
+                autocomplete="off"
               />Animal Handling</label
             >
           </li>
@@ -125,6 +127,7 @@
                 type="checkbox"
                 class="check"
                 value="arcana"
+                autocomplete="off"
               />Arcana</label
             >
           </li>
@@ -134,6 +137,7 @@
                 type="checkbox"
                 class="check"
                 value="athletics"
+                autocomplete="off"
               />Athletics</label
             >
           </li>
@@ -143,6 +147,7 @@
                 type="checkbox"
                 class="check"
                 value="deception"
+                autocomplete="off"
               />Deception</label
             >
           </li>
@@ -152,6 +157,7 @@
                 type="checkbox"
                 class="check"
                 value="history"
+                autocomplete="off"
               />History</label
             >
           </li>
@@ -161,6 +167,7 @@
                 type="checkbox"
                 class="check"
                 value="insight"
+                autocomplete="off"
               />Insight</label
             >
           </li>
@@ -170,6 +177,7 @@
                 type="checkbox"
                 class="check"
                 value="intimidation"
+                autocomplete="off"
               />Intimidation</label
             >
           </li>
@@ -179,6 +187,7 @@
                 type="checkbox"
                 class="check"
                 value="investigation"
+                autocomplete="off"
               />Investigation</label
             >
           </li>
@@ -188,6 +197,7 @@
                 type="checkbox"
                 class="check"
                 value="medicine"
+                autocomplete="off"
               />Medicine</label
             >
           </li>
@@ -197,6 +207,7 @@
                 type="checkbox"
                 class="check"
                 value="nature"
+                autocomplete="off"
               />Nature</label
             >
           </li>
@@ -206,6 +217,7 @@
                 type="checkbox"
                 class="check"
                 value="perception"
+                autocomplete="off"
               />Perception</label
             >
           </li>
@@ -215,6 +227,7 @@
                 type="checkbox"
                 class="check"
                 value="performance"
+                autocomplete="off"
               />Performance</label
             >
           </li>
@@ -224,6 +237,7 @@
                 type="checkbox"
                 class="check"
                 value="persuasion"
+                autocomplete="off"
               />Persuasion</label
             >
           </li>
@@ -233,6 +247,7 @@
                 type="checkbox"
                 class="check"
                 value="religion"
+                autocomplete="off"
               />Religion</label
             >
           </li>
@@ -242,6 +257,7 @@
                 type="checkbox"
                 class="check"
                 value="slight of hand"
+                autocomplete="off"
               />Slight of Hand</label
             >
           </li>
@@ -251,6 +267,7 @@
                 type="checkbox"
                 class="check"
                 value="stealth"
+                autocomplete="off"
               />Stealth</label
             >
           </li>
@@ -260,6 +277,7 @@
                 type="checkbox"
                 class="check"
                 value="survival"
+                autocomplete="off"
               />Survival</label
             >
           </li>
